--- a/index.html
+++ b/index.html
@@ -9,17 +9,33 @@
     <title>Scroll Animation</title>
   </head>
   <body>
-    <h1>Scroll to see the animation</h1>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
+    <div class="other-content">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maxime
+      quam exercitationem doloremque quae dignissimos saepe commodi nostrum
+      nesciunt praesentium sed cumque, sequi, dolores harum dolore eligendi hic
+      soluta aliquid accusamus fugiat officia? Soluta quidem, veniam similique
+      nisi ullam animi perferendis dicta maxime ut amet nulla quo suscipit
+      incidunt facilis.
+    </div>
+    <div class="scroll-animation-content">
+      <h1>7 RULES OF LIFE</h1>
+      <div class="box"><h2>LET IT GO</h2></div>
+      <div class="box"><h2>BE YOURSELF</h2></div>
+      <div class="box"><h2>GIVE IT TIME</h2></div>
+      <div class="box"><h2>DON'T COMPARE</h2></div>
+      <div class="box"><h2>STOP THINKING TOO MUCH</h2></div>
+      <div class="box"><h2>IT'S ON YOU</h2></div>
+      <div class="box"><h2>SMILE</h2></div>
+    </div>
+    <div class="other-content">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maxime
+      quam exercitationem doloremque quae dignissimos saepe commodi nostrum
+      nesciunt praesentium sed cumque, sequi, dolores harum dolore eligendi hic
+      soluta aliquid accusamus fugiat officia? Soluta quidem, veniam similique
+      nisi ullam animi perferendis dicta maxime ut amet nulla quo suscipit
+      incidunt facilis.
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
