--- a/index.html
+++ b/index.html
@@ -9,32 +9,90 @@
     <title>Scroll Animation</title>
   </head>
   <body>
-    <div class="other-content">
+    <!-- <div class="other-content">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maxime
       quam exercitationem doloremque quae dignissimos saepe commodi nostrum
       nesciunt praesentium sed cumque, sequi, dolores harum dolore eligendi hic
       soluta aliquid accusamus fugiat officia? Soluta quidem, veniam similique
       nisi ullam animi perferendis dicta maxime ut amet nulla quo suscipit
       incidunt facilis.
-    </div>
+    </div> -->
     <div class="scroll-animation-content">
-      <h1>7 RULES OF LIFE</h1>
-      <div class="box"><h2>LET IT GO</h2></div>
-      <div class="box"><h2>BE YOURSELF</h2></div>
-      <div class="box"><h2>GIVE IT TIME</h2></div>
-      <div class="box"><h2>DON'T COMPARE</h2></div>
-      <div class="box"><h2>STOP THINKING TOO MUCH</h2></div>
-      <div class="box"><h2>IT'S ON YOU</h2></div>
-      <div class="box"><h2>SMILE</h2></div>
+      <h1>RULES OF LIFE</h1>
+      <div
+        class="box panel"
+        style="
+          background-image: url('https://images.unsplash.com/photo-1527945505182-b4c5cbc546a6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1951&q=80');
+        "
+      >
+        <h2>LET IT GO</h2>
+      </div>
+      <div
+        class="box panel"
+        style="
+          background-image: url('https://images.unsplash.com/photo-1565178843646-fe93224379b6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80');
+        "
+      >
+        <h2>BE YOURSELF</h2>
+      </div>
+      <div
+        class="box panel"
+        style="
+          background-image: url('https://images.unsplash.com/photo-1520227403038-be195e6e2a91?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+        "
+      >
+        <h2>GIVE IT TIME</h2>
+      </div>
+      <div
+        class="box panel"
+        style="
+          background-image: url('https://images.unsplash.com/photo-1586786810639-e6e7332793cf?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+        "
+      >
+        <h2>DON'T COMPARE</h2>
+      </div>
+
+      <div
+        class="box panel"
+        style="
+          background-image: url('https://images.unsplash.com/photo-1527945505182-b4c5cbc546a6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1951&q=80');
+        "
+      >
+        <h2>IT'S ON YOU</h2>
+      </div>
+      <div
+        class="box panel"
+        style="
+          background-image: url('https://images.unsplash.com/photo-1565178843646-fe93224379b6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80');
+        "
+      >
+        <h2>SMILE</h2>
+      </div>
+      <div
+        class="box panel"
+        style="
+          background-image: url('https://images.unsplash.com/photo-1520227403038-be195e6e2a91?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+        "
+      >
+        <h2>BE KIND</h2>
+      </div>
+      <div
+        class="box panel"
+        style="
+          background-image: url('https://images.unsplash.com/photo-1586786810639-e6e7332793cf?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+        "
+      >
+        <h2>STAY CALM</h2>
+      </div>
     </div>
-    <div class="other-content">
+    <!-- <div class="other-content">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maxime
       quam exercitationem doloremque quae dignissimos saepe commodi nostrum
       nesciunt praesentium sed cumque, sequi, dolores harum dolore eligendi hic
       soluta aliquid accusamus fugiat officia? Soluta quidem, veniam similique
       nisi ullam animi perferendis dicta maxime ut amet nulla quo suscipit
       incidunt facilis.
-    </div>
+    </div> -->
 
     <script src="script.js"></script>
   </body>
